Fix T40816, SSS brightness difference with Sample All Direct Lights.

This has been fixed before, but somehow got reverted in d644753319b6.